trunk/Archive2/99/611b504f52b2c0/output
main.cpp:5:9: error: template with C linkage
         template<typename Ret, typename... Args>
         ^
main.cpp: In constructor 'bound_function<Ret(Args ...)>::bound_function(F)':
main.cpp:17:53: error: 'move_function_' is not a member of 'std'
     explicit bound_function(F function_) : function(std::move_function_) { }
                                                     ^
